--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </div>
 </section>
         
-<section class="social-proof">
+<section class="social-proof" style="display:none;">
     <div class="container">
         <div class="section-title"><h2>众多创新企业的信赖之选</h2></div>
         <div class="client-logos d-flex flex-wrap justify-content-center align-items-center">
