--- a/partners.html
+++ b/partners.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <h1 class="display-4">成为我们的合作伙伴</h1>
                 <p class="lead col-md-8 mx-auto">与专速通携手，为您的客户提供快速、稳定的知识产权授权服务，共同开拓知识产权市场。</p>
-                <a class="btn btn-warning btn-lg mt-3" href="contact.html">立即申请合作</a>
+                <a class="btn btn-warning btn-lg mt-3" href="contact.html">发送合作意向</a>
             </div>
         </section>
         <section>
