--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h3 class="mb-4">在线咨询</h3>
-                    <form id="contactForm" https://formspree.io/f/mwpngyjo method="POST">
+                    <form id="contactForm" action="https://formspree.io/f/mwpngyjo" method="POST">
                         <div class="mb-3"><label for="name" class="form-label">您的姓名</label><input type="text" class="form-control" id="name" required></div>
                         <div class="mb-3"><label for="phone" class="form-label">联系电话</label><input type="tel" class="form-control" id="phone" required></div>
                         <div class="mb-3">
