--- a/contact.html
+++ b/contact.html
@@ -45,15 +45,24 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto align-items-center">
                         <li class="nav-item"><a class="nav-link" href="index.html">首页</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">核心价值</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="ip-capital.html">知识产权实缴</a></li>
+                                <li><a class="dropdown-item" href="gov-subsidies.html">政府资质与补贴</a></li>
+                                <li><a class="dropdown-item" href="academic-advancement.html">职称 & 学位申请</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="services.html">服务与价格</a></li>
                         <li class="nav-item"><a class="nav-link" href="partners.html">渠道合作</a></li>
                         <li class="nav-item"><a class="nav-link" href="faq.html">常见问题</a></li>
-                        <li class="nav-item"><a class="nav-link nav-contact-btn active" href="contact.html">联系我们</a></li>
+                        <li class="nav-item"><a class="nav-link nav-contact-btn" href="contact.html">联系我们</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
     <main>
         <section class="page-header">
             <div class="container">
