--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto align-items-center">
-                        <li class="nav-item"><a class="nav-link active" href="index.html">首页</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">首页</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">核心价值</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="ip-capital.html">知识产权实缴</a></li>
+                                <li><a class="dropdown-item" href="gov-subsidies.html">政府资质与补贴</a></li>
+                                <li><a class="dropdown-item" href="academic-advancement.html">职称 & 学位申请</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="services.html">服务与价格</a></li>
                         <li class="nav-item"><a class="nav-link" href="partners.html">渠道合作</a></li>
                         <li class="nav-item"><a class="nav-link" href="faq.html">常见问题</a></li>
@@ -168,6 +176,43 @@
             <img src="https://via.placeholder.com/150x60.png?text=CLIENT+LOGO" alt="客户Logo 3">
             <img src="https://via.placeholder.com/150x60.png?text=CLIENT+LOGO" alt="客户Logo 4">
             <img src="https://via.placeholder.com/150x60.png?text=CLIENT+LOGO" alt="客户Logo 5">
+        </div>
+    </div>
+</section>
+
+<section id="value-propositions" class="bg-light">
+    <div class="container">
+        <div class="section-title">
+            <h2>专速通可以帮助您</h2>
+            <p>快速获得专利证书，实现关键价值。</p>
+        </div>
+        <div class="row g-4">
+            <div class="col-lg-4 d-flex align-items-stretch">
+                <div class="commitment-card">
+                    <div class="icon"><i class="bi bi-bank"></i></div>
+                    <h4 class="mt-3">知识产权实缴</h4>
+                    <p>将专利作为无形资产注入公司，合规、低成本地增加注册资本，彰显公司技术实力，吸引投资。</p>
+                    <a href="ip-capital.html" class="btn btn-outline-primary mt-auto">了解详情</a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 d-flex align-items-stretch">
+                <div class="commitment-card">
+                    <div class="icon"><i class="bi bi-award"></i></div>
+                    <h4 class="mt-3">政府资质与补贴</h4>
+                    <p>专利是<strong>申报高新技术企业、专精特新甚至IPO</strong>等资质的核心指标。快速拿证，助您尽早享受百万级政府补贴和税收优惠。</p>
+                    <a href="gov-subsidies.html" class="btn btn-outline-primary mt-auto">了解详情</a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 d-flex align-items-stretch">
+                <div class="commitment-card">
+                    <div class="icon"><i class="bi bi-mortarboard"></i></div>
+                    <h4 class="mt-3">职称 & 学位申请</h4>
+                    <p>工程师、研究人员、医生等可凭发明或实用新型专利评定职称。学生可凭专利在考研、留学、落户等方面获得加分。</p>
+                    <a href="academic-advancement.html" class="btn btn-outline-primary mt-auto">了解详情</a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
