--- a/indexcopy.html
+++ b/indexcopy.html
@@ -106,7 +106,7 @@
                     <div style="padding: 40px 40px 30px 40px;">
                         <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 20px;">
                             <div>
-                                <h2 style="text-align: left; margin: 0; font-size: 2.2em; color: #333;">发明专利 <span style="color: #d93025;">5折</span></h2>
+                                <h2 style="text-align: left; margin: 0; font-size: 2.2em; color: #333;">发明专利 <span style="color: #d93025;"></span></h2>
                             </div>
                             <div style="background: #d93025; color: #fff; padding: 5px 15px; border-radius: 50px; font-weight: bold; font-size: 0.9em;">
                                 <i class="fas fa-fire"></i> 爆款推荐
@@ -140,7 +140,7 @@
                         <div style="flex: 1; display: flex; align-items: center; border-right: 1px solid #e0e0e0; padding-right: 20px;">
                             <div style="margin-right: 15px;">
                                 <div style="font-weight: bold; font-size: 1.1em; color: #333;">实用新型</div>
-                                <div style="font-size: 0.8em; color: #888;">Utility Model</div>
+                        
                             </div>
                             <div>
                                 <span style="color: var(--primary-color); font-size: 1.5em; font-weight: bold;">¥1,500</span>
@@ -151,7 +151,7 @@
                         <div style="flex: 1; display: flex; align-items: center; padding-left: 30px;">
                             <div style="margin-right: 15px;">
                                 <div style="font-weight: bold; font-size: 1.1em; color: #333;">外观设计</div>
-                                <div style="font-size: 0.8em; color: #888;">Design Patent</div>
+                             
                             </div>
                             <div>
                                 <span style="color: var(--primary-color); font-size: 1.5em; font-weight: bold;">¥750</span>
