--- a/indexcopy.html
+++ b/indexcopy.html
@@ -160,9 +160,9 @@
                         </div>
                     </div>
                     
-                    <div style="background: linear-gradient(90deg, #aaa, #ff6f61); color: #fff; font-size: 1.3em; font-weight: bold; text-align: center; padding: 20px; letter-spacing: 2px;">
-                        点击立即咨询顾问 · 获取五折名额 <i class="fas fa-chevron-right"></i>
-                    </div>
+<div class="open-zst-modal-trigger" style="background: linear-gradient(90deg, #d93025, #ff6f61); color: #fff; font-size: 1.3em; font-weight: bold; text-align: center; padding: 20px; letter-spacing: 2px; cursor: pointer;">
+    点击立即咨询顾问 · 获取五折名额 <i class="fas fa-chevron-right"></i>
+</div>
                 </a>
 
             </div>
