--- a/indexcopy.html
+++ b/indexcopy.html
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     
-<div class="btn btn-outline-light btn-lg px-4" id="openWechatBtn" data-bs-toggle="modal" data-bs-target="#wechatModal" style="background: linear-gradient(90deg, #d93025, #ff6f61); color: #fff; font-size: 1.3em; font-weight: bold; text-align: center; padding: 20px; letter-spacing: 2px; cursor: pointer;">
+<div id="openWechatBtn" data-bs-toggle="modal" data-bs-target="#wechatModal" style="background: linear-gradient(90deg, #d93025, #ff6f61); color: #fff; font-size: 1.3em; font-weight: bold; text-align: center; padding: 20px; letter-spacing: 2px; cursor: pointer;">
     点击立即咨询顾问 · 获取五折名额 <i class="fas fa-chevron-right"></i>
 </div>
                 </a>
