--- a/reexam.html
+++ b/reexam.html
@@ -263,7 +263,7 @@
                     <div id="q1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             <strong>A: 很多驳回并非“死刑”。</strong><br>
-                            审查员的驳回意见往往带有主观性，或者是由于未能充分理解技术方案导致的。我们的前审查员团队深知官方的审查逻辑，通过调整保护范围或争辩创造性，<strong>历史撤驳成功率高达 60%</strong>。建议您先发给我们《驳回决定书》，我们提供免费的可行性评估。
+                            审查员的驳回意见往往带有主观性，或者是由于未能充分理解技术方案导致的。我们的前审查员团队深知官方的审查逻辑，通过调整保护范围或争辩创造性，<strong>历史撤驳成功率高达 70%</strong>。建议您先发给我们《驳回决定书》，我们提供免费的可行性评估。
                         </div>
                     </div>
                 </div>
@@ -271,13 +271,13 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q2">
-                            Q2: “1000+2000”的收费模式是怎么样的？
+                            Q2: 专速通的收费模式是怎么样的？
                         </button>
                     </h2>
                     <div id="q2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
-                            <strong>A: 这是我们推出的“风险共担”模式。</strong><br>
-                            您前期只需支付 <strong>¥1000</strong> 的基础代理费（用于撰写复审请求书及官方流程）。只有当专利复审成功、收到《复审决定书》撤销驳回后，您才需要支付 <strong>¥2000</strong> 的成功奖励。如果复审维持驳回，我们不收取这笔奖励费，最大程度降低您的试错成本。
+                            <strong>A: 这是我们推出的基础加风险模式。</strong><br>
+                            您前期只需支付 <strong>¥1000</strong> 的基础代理费（用于撰写复审请求书及官方流程）。只有当专利复审成功、收到《复审决定书》撤销驳回后，您才需要支付 <strong>¥1000</strong> 的成功奖励。如果复审维持驳回，我们不收取这笔奖励费，最大程度降低您的试错成本。
                         </div>
                     </div>
                 </div>
@@ -292,8 +292,8 @@
                         <div class="accordion-body">
                             <strong>A: 流程非常简单。</strong><br>
                             第一步：将国知局下发的《驳回决定书》发给我们的顾问。<br>
-                            第二步：我们会在 24 小时内出具评估报告。如果建议复审，我们会安排资深专利代理人与您沟通具体答辩思路。<br>
-                            第三步：您确认方案后，剩下的撰写、提交、答辩全权由我们负责。
+                            第二步：我们会在 24 小时内出具评估报告。如果建议复审，我们会安排资深专利代理人与您沟通需求。<br>
+                            第三步：复审请求的撰写、提交、答辩全权由我们负责。
                         </div>
                     </div>
                 </div>
