--- a/reexam.html
+++ b/reexam.html
@@ -147,7 +147,7 @@
 
                     <div style="display: flex; justify-content: space-between; align-items: stretch; margin-bottom: 30px;">
                         
-                        <div style="flex: 1; text-align: center; border-right: 1px dashed #ccc; padding-right: 10px;">
+                        <div style="flex: 1; text-align: center; padding-right: 10px;">
                             <div style="font-size: 2.2rem; font-weight: 900; color:  #d93025; line-height: 1;">¥1000</div>
                             <div style="font-size: 0.9em; color: #666; margin-top: 5px;"><br>复审成功支付等额奖励，不成功不奖励</div>
                         </div>
