--- a/services.html
+++ b/services.html
@@ -101,7 +101,7 @@
                             <td rowspan="2" class="fw-bold"><i class="bi bi-award-fill"></i> 全风险代理<br>(含官方加急)</td><td>发明专利</td><td class="highlight-price">12,000</td>
                             <td class="text-start service-details"><ul><li><strong>承诺：未授权，100%退服务费</strong></li><li>包含官方加急审查通道（预审/优审）</li><li>前审查员团队高质量撰写与质检</li></ul></td>
                         </tr>
-                        <tr class="risk-guarantee-row"><td colspan="3" class="text-start text-muted small p-2"><em>¹ 注：若未授权，官费由政府收取不退。若选择免费重申，第二次官费由我方承担。</em></td></tr>
+                        <tr class="risk-guarantee-row"><td colspan="3" class="text-start text-muted small p-2"><em>¹ 注：若未授权，官费由政府收取不退。若选择免费重申，第二次服务费全免。</em></td></tr>
                         <tr>
                             <td rowspan="3" class="fw-bold">普通代理</td><td>发明专利</td><td class="highlight-price">6,000</td>
                             <td rowspan="3" class="text-start service-details"><ul><li>红圈所标准高质量撰写</li><li>前审查员团队质检，历史授权率85%</li><li class="text-muted">不含加急通道与风险保障</li></ul></td>
